<resources>
    <string name="app_name">Youth Volunteer</string>
    <string name="action_settings">Settings</string>
    <string name="parse_app_id">zgf2GHFb5OlcmPHhnqcByNdGickfavaWqopQhvGw</string>
    <string name="parse_client_key">4enb4bsmZrZywUjOeVCQWvyPxrCdKHQw8d9u03Sb</string>
    <string name="fb_app_id">985731814799032</string>
    <string name="google_api_key">AIzaSyCewRzoZ23-pJFH-oYcYD2tyXo9eXqWU9M</string>
    <string name="preference_file_key">com.ccss.youthvolunteer.nbksxlz</string>
    <string name="internet_connection_unavailable"><b>Please check your Internet Connection</b></string>
    <string name="incomplete_profile_no_internet"><b>You need to complete your profile. Unable to connect to internet at the moment. Please try later.</b></string>
    <string name="verify_email_error_title"><b>Please confirm your email address!</b></string>
    <string name="verify_email_error_message">Thank you for signing up. Please take a moment to activate your account.</string>
    <string name="verify_email_error_message2">An email with confirmation link was sent to </string>
    <string name="verify_email_error_message3">Follow instructions in the message to complete your sign up.</string>
    <string name="verify_email_error_message4">We look forward to see you contribute to the society!!</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_refresh_main">Refresh</string>
    <string name="title_wall_main">Wall</string>
    <string name="profile_title_logged_in">Signed in as</string>
    <string name="profile_logout_button_label">Sign out</string>
    <string name="profile_title_logged_out">You must be signed in to view your profile</string>
    <string name="profile_login_button_label">Sign in</string>
    <string name="nav_title_edit_profile">Edit Profile</string>
    <string name="nav_title_achievements">History</string>
    <string name="nav_title_ranking">View Leaderboard</string>
    <string name="nav_title_volunteer">Volunteer</string>
    <string name="nav_title_search">Search Opportunites</string>
    <string name="nav_title_location">Location</string>
    <string name="menu_item_communicate">Communicate</string>
    <string name="nav_about">About</string>
    <string name="nav_manage_label">Manage</string>
    <string name="delete_button_label">Delete</string>
    <string name="clone_button_label">Clone</string>
    <string name="nav_spl_user">Special Users</string>
    <string name="nav_announcement">Announcements</string>
    <string name="nav_category">Categories</string>
    <string name="nav_opportunity">Volunteer Opportunities</string>
    <string name="nav_recognition">Recognitions</string>
    <string name="nav_interests">Interests</string>
    <string name="nav_skills">Skills</string>
    <string name="nav_schools">Schools</string>
    <string name="nav_groups">Interest Groups</string>
    <string name="nav_organization">Organizations</string>
    <string name="nav_user_action">User Action</string>
    <string name="nav_communicate_label">Communicate</string>
    <string name="msg_save_sucess">Saved successfully</string>
    <string name="msg_delete_sucess">Deleted successfully</string>
    <string name="msg_progress_wait">Please wait…</string>
    <string name="msg_no_current_location">No search location specified</string>
    <string name="msg_no_results_found">No results found</string>
    <string name="search_hint">Search by name</string>
    <string name="add_item">Add</string>
    <string name="view_edit_item">Edit</string>
    <string name="switch_view">Switch between List </string>
    <string name="title_input_hint">Title</string>
    <string name="description_max_200">Description (max 200 chars)</string>
    <string name="category_color_hint">Category hex color (#XXXXXX)</string>
    <string name="color_picker">Color picker</string>
    <string name="active_text">Is Active?</string>
    <string name="nav_title_volunteers">Volunteers</string>
    <string name="no_announcements_available">No Announcements defined</string>
    <string name="no_categories_available">No Categories defined</string>
    <string name="no_recog_available">No Recognitions defined</string>
    <string name="no_interests_available">No Interests defined</string>
    <string name="no_skills_available">No Skills defined</string>
    <string name="no_sp_available">No Special users defined</string>
    <string name="no_schools_available">No Schools defined</string>
    <string name="no_groups_available">No Interest Groups defined</string>
    <string name="no_orgs_available">No Organizations defined</string>
    <string name="no_opportunities_available">No Opportunities defined</string>
    <string name="no_pending_actions_available">No pending actions</string>
    <string name="no_users_available">No volunteers</string>
    <string name="no_email_selected">Please select users to send the email</string>
    <string name="emailIds_copied_message">Successfully copied %1$d email ids</string>
    <string name="volunteer_interest_subject">Thank you for your interest</string>
    <string name="volunteer_interest_message">Thank you for your interest in activity: %1$s</string>
    <string name="ok">OK</string>
    <string name="dialog_title_error">Error</string>
    <string name="retry">Retry</string>
    <string name="prompt_email">Email Id</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign In</string>
    <string name="action_fb_sign_in">Sign In with Facebook</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="prompt_forgot_password">Forgot password?</string>
    <string name="error_invalid_credentials">You email and/or password is not correct</string>
    <string name="permission_rationale">Contacts permissions are needed for providing email completions.</string>
    <string name="help_us_know_you">Help us know you better…</string>
    <string name="prompt_first_name">First Name</string>
    <string name="prompt_last_name">Last Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="error_mismatch_password">Passwords do not match</string>
    <string name="profile_select_image">Select Profile Image</string>
    <string name="prompt_school_name">School Name</string>
    <string name="prompt_phone_number">Phone Number</string>
    <string name="action_register_user">Register</string>
    <string name="action_submit_register_user">Submit Registration</string>
    <string name="msg_user_register_success">Registration successful</string>
    <string name="msg_user_update_success">Details updated</string>
    <string name="msg_data_success">Record saved successfully!</string>
    <string name="msg_data_failure">Record could not be saved!</string>
    <string name="msg_user_register_failed">Registration failure</string>
    <string name="prompt_rotate">Rotate</string>
    <string name="prompt_crop_done">Done</string>
    <string name="prompt_select_source">Select source</string>
    <string name="skills_title">SKILLS</string>
    <string name="skills_navigation_next">Skills &gt;</string>
    <string name="skills_navigation_prev">&lt; Skills</string>
    <string name="interests_title">INTERESTS</string>
    <string name="interests_navigation">&lt; Interests</string>
    <string name="personal_details_title">DETAILS</string>
    <string name="details_navigation_next">Details &gt;</string>
    <string name="details_navigation_prev">&lt; Details</string>
    <string name="ranked">Top 3</string>
    <string name="select">Select</string>
    <string name="selected">Selected</string>
    <string name="select_interest_message">Select at least one Interest</string>
    <string name="select_skills_message">Select at least one Skill</string>
    <string name="nav_next"> &gt;</string>
    <string name="nav_prev">&lt; </string>
    <string name="interested_users_navigation_prev">&lt; Interested Users</string>
    <string name="interested_users_navigation_next">Interested Users &gt;</string>
    <string name="interested_users_title">INTERESTED USERS</string>
    <string name="volunteered_users_navigation">Participating Users &gt;</string>
    <string name="volunteered_users_title">PARTICIPATING USERS</string>
    <string name="main_message">VOLUNTEER on the GO!!</string>
    <string name="main_goodness">INCREASE your Goodness Factor</string>
    <string name="main_month_stat_title">Your volunteering statistics for this month:</string>
    <string name="main_month_points_title">Your volunteering statistics for this month:</string>
    <string name="main_points">EARN Points</string>
    <string name="main_points_rank">Overall with %1$d points and %2$d hours you are ranked %3$d out of %4$d volunteers!</string>
    <string name="total_sg_users_hours">Our %1$d volunteers have put in %2$s hours!</string>
    <string name="upcoming_event">Upcoming activity: %1$s</string>
    <string name="main_this_month_title">This month\'s statistics:</string>
    <string name="main_month_points">Your monthly target: hrs. Hours done: .</string>
    <string name="main_recognised">ACHIEVE Recognition</string>
    <string name="main_recognised_level">Your Level</string>
    <string name="main_recognised_title">Your Title</string>
    <string name="main_line_trophies">WIN Trophies</string>
    <string name="main_latest_trophy">Your Latest Trophy</string>
    <string name="main_data_as_of">*data as of %1$s</string>
    <string name="data_is_latest">No new updates</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="prompt_date">Date (dd/MM/yyyy)</string>
    <string name="prompt_duration">Duration (hh:mm)</string>
    <string name="activity_category">Category</string>
    <string name="clock">Clock</string>
    <string name="comments_max_150">Comments (max 150 chars)</string>
    <string name="activity_rating">Rating </string>
    <string name="activity_post_comment">%1$s contributed %2$.2f hours for %3$s</string>
    <string name="activity_post_success">Posted to Wall</string>
    <string name="special_feature_hint">Special feature</string>
    <string name="impact_hint">Social impact</string>
    <string name="location_hint">Location</string>
    <string name="virtual_text">Is Virtual?</string>
    <string name="category_input_hint">Category</string>
    <string name="org_input_hint">Organization</string>
    <string name="user_role_hint">User Role</string>
    <string name="recognition_hours_required">Required Hours/Points</string>
    <string name="recognition_max_units">Max available units</string>
    <string name="recog_unit">Is hours based?</string>
    <string name="search_by_category">By Category</string>
    <string name="search_by_org">By Organization</string>
    <string name="search_by_type">By Type</string>
    <string name="show_past">Past</string>
    <string name="show_upcoming">Upcoming</string>
    <string name="title_home">Home</string>
    <string name="prompt_save">Save</string>
    <string name="action_prompt">Select Activity</string>
    <string name="nav_title_publish">Publish</string>
    <string name="title_activity_main">Volunteer Home</string>
    <string name="title_activity_wall">Volunteer Wall</string>
    <string name="pref_title_connection_timeout">Connection Timeout:</string>
    <string name="pref_title_response_timeout">Response Timeout</string>
    <string name="pref_title_search_radius">Search Radius</string>
    <string name="action_approve">Approve</string>
    <string name="action_reject">Reject</string>
</resources>