<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_view_volunteer" android:icon="@android:drawable/ic_menu_search"
            android:title="@string/nav_title_volunteer" />
        <!--<item android:id="@+id/nav_places" android:icon="@android:drawable/ic_menu_compass"-->
            <!--android:title="@string/nav_title_places" />-->
        <item android:id="@+id/nav_view_ranking" android:icon="@android:drawable/ic_menu_sort_by_size"
            android:title="@string/nav_title_ranking" />
        <item android:id="@+id/nav_view_achievement" android:icon="@android:drawable/ic_menu_myplaces"
            android:title="@string/nav_title_achievements" />
        <item android:id="@+id/nav_edit_profile" android:icon="@android:drawable/ic_menu_edit"
            android:title="@string/nav_title_edit_profile" />
        <item android:id="@+id/nav_logout" android:icon="@android:drawable/ic_menu_close_clear_cancel"
            android:title="@string/profile_logout_button_label" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item android:id="@+id/nav_publish" android:icon="@android:drawable/ic_menu_share"
                android:title="@string/nav_title_publish"  />
        </menu>
    </item>

    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />

    <item android:id="@+id/nav_about" android:title="@string/nav_about"
        android:icon="@android:drawable/ic_menu_info_details"
        android:orderInCategory="100" app:showAsAction="never" />

</menu>