<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.ccss.youthvolunteer.activity.ProfileActivity">

    <item android:id="@+id/nav_main_refresh" android:title="@string/title_refresh_main"
        android:icon="@drawable/ic_refresh_white" app:showAsAction="ifRoom"/>
    <item android:id="@+id/nav_main_wall" android:title="@string/title_wall_main"
        android:icon="@drawable/ic_wall_white" app:showAsAction="ifRoom"/>
    <item android:id="@+id/nav_edit_profile" android:title="@string/nav_title_edit_profile" app:showAsAction="never"/>
    <item android:id="@+id/action_logout"  android:title="@string/profile_logout_button_label" app:showAsAction="never"/>

</menu>
