<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:key="connection_timeout"
        android:title="@string/pref_title_connection_timeout"
        android:defaultValue="20000"
        android:selectAllOnFocus="true"
        android:inputType="number"
        android:capitalize="words"
        android:singleLine="true"
        android:maxLines="1" />

    <EditTextPreference
        android:key="response_timeout"
        android:title="@string/pref_title_response_timeout"
        android:defaultValue="60000"
        android:selectAllOnFocus="true"
        android:inputType="number"
        android:capitalize="words"
        android:singleLine="true"
        android:maxLines="1" />

    <EditTextPreference
        android:key="search_radius"
        android:title="@string/pref_title_search_radius"
        android:defaultValue="1000"
        android:selectAllOnFocus="true"
        android:inputType="number"
        android:capitalize="words"
        android:singleLine="true"
        android:maxLines="1" />

</PreferenceScreen>