<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.ccss.youthvolunteer.activity.SingleResourceActivity">

    <EditText
        android:id="@+id/manage_res_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/ParseLoginUI.EditText"
        android:layout_marginTop="@dimen/com_parse_ui_small_vertical_spacing"
        android:hint="@string/title_input_hint"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/manage_res_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLength="200"
        android:maxLines="4"
        style="@style/ParseLoginUI.EditText"
        android:layout_marginTop="@dimen/com_parse_ui_small_vertical_spacing"
        android:hint="@string/description_max_200"
        android:inputType="textMultiLine" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/manage_color_picker"
        android:visibility="gone"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/manage_category_indicator"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            style="@style/ParseLoginUI.EditText"
            android:layout_marginTop="@dimen/com_parse_ui_small_vertical_spacing"
            android:hint="@string/category_color_hint"
            android:inputType= "none|text"/>

        <TextView
            android:layout_width="@dimen/com_parse_ui_vertical_spacing"
            android:layout_height="@dimen/com_parse_ui_vertical_spacing"
            android:id="@+id/manage_category_color_indicator"
            android:layout_toEndOf="@id/manage_category_indicator"
            android:layout_toRightOf="@id/manage_category_indicator"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cal_button"
            android:layout_alignTop="@id/manage_category_indicator"
            android:layout_toEndOf="@id/manage_category_color_indicator"
            android:layout_toRightOf="@id/manage_category_color_indicator"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:background="@android:color/transparent"
            android:src="@drawable/colour_picker"
            android:contentDescription="@string/color_picker" />
    </RelativeLayout>

    <CheckBox android:id="@+id/manage_active"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/ParseLoginUI.TextView.Permission"
        android:checked="true"
        android:layout_marginTop="@dimen/com_parse_ui_small_vertical_spacing"
        android:paddingLeft="@dimen/com_parse_ui_padding_checkbox"
        android:text="@string/active_text" />

    <Button
        android:id="@+id/manage_res_submit"
        style="@style/ParseLoginUI.Button"
        android:layout_marginTop="@dimen/com_parse_ui_small_vertical_spacing"
        android:text="@string/prompt_save" />

</LinearLayout>
